# magi-hermes

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
magi_plugin/: __init__.py  agent_schema.py  backend.py  consensus.py  cost.py  finding_validation.py  input_size.py  models.py  ollama_backend.py  ollama_config.py  ollama_init.py  ollama_preflight.py  orchestrator.py  parse_agent_output.py  reporting.py  review_context.py  run_lock.py  sanitize.py  schemas.py  status_display.py  stderr_shim.py  subprocess_utils.py  synthesize.py  temp_dirs.py  validate.py
magi_plugin/agents/: balthasar.md  caspar.md
skills/magi/: SKILL.md
skills/magi/agents/: melchior.md
skills/magi/scripts/: consensus.py  finding_id.py  hermes_magi.py  models.py  synthesize.py  validate.py
