[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magi-hermes-plugin"
version = "2.0.0"
description = "Multi-perspective analysis plugin for Hermes Agent — three adversarial LLM agents (Melchior, Balthasar, Caspar) with weighted consensus"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Julian Bolivar", email = "julian@bolivartech.com"},
]
keywords = [
    "hermes-agent", "plugin", "magi", "multi-perspective",
    "code-review", "ollama", "local-llm", "consensus",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/BolivarTech/magi-hermes"
Documentation = "https://github.com/BolivarTech/magi-hermes#readme"
Repository = "https://github.com/BolivarTech/magi-hermes"
Issues = "https://github.com/BolivarTech/magi-hermes/issues"

[project.entry-points."hermes_agent.plugins"]
magi = "magi_plugin"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["magi_plugin*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
